# game-2048-env

./: .dockerignore  .gitignore  README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml  train_2048_unsloth.ipynb
server/: app.py  game_2048.py  game_2048_environment.py
