[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-game-2048-env"
version = "0.1.0"
description = "2048 Game Environment for OpenEnv - classic sliding tile puzzle for agentic RL training"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.1.0",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "game_2048_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["game_2048_env", "game_2048_env.server"]
package-dir = { "game_2048_env" = ".", "game_2048_env.server" = "server" }
